fix: test_selector should be under inputs for hermetic test workflows

--- a/.github/workflows/hermetic.yml
+++ b/.github/workflows/hermetic.yml
@@ -8,11 +8,12 @@ on:
   schedule:
     - cron: "0 0/8 * * *" # Every 8 hours
   workflow_dispatch: # manually triggered
-    test_selector:
-      type: string
-      description: Path regex passed to Jest to select which tests to run
-      required: true
-      default: .
+    inputs:
+      test_selector:
+        type: string
+        description: Path regex passed to Jest to select which tests to run
+        required: true
+        default: .
 
 env:
   CARGO_TERM_COLOR: always
