--- a/.github/workflows/hermetic_long_lived.yml
+++ b/.github/workflows/hermetic_long_lived.yml
@@ -4,11 +4,12 @@ on:
   schedule:
     - cron: "0 0/8 * * *" # Every 8 hours
   workflow_dispatch: # manually triggered
-    test_selector:
-      type: string
-      description: Path regex passed to Jest to select which tests to run
-      required: true
-      default: .
+    inputs:
+      test_selector:
+        type: string
+        description: Path regex passed to Jest to select which tests to run
+        required: true
+        default: .
 
 env:
   CARGO_TERM_COLOR: always
@@ -119,7 +120,7 @@ jobs:
           export TEST_NETWORK=./networks/${{ matrix.networks }}.yaml
           chmod +x ./bin/hermetic-driver
 
-          # For schedule events, "test_selector" will be null, so default to running all tests.
+          # For scheduled events, "test_selector" will be null, so default to running all tests.
           test_selector=${{ github.event.inputs.test_selector || '.' }}
 
           # Clear the test suffix and set a 2 week TTL so that the latest suite image runs against the same long-lived
