--- a/suite/package.json
+++ b/suite/package.json
@@ -8,6 +8,8 @@
     "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "devDependencies": {
+    "@composedb/devtools-node": "^0.5.2",
+    "@composedb/types": "^0.5.1",
     "@skypack/package-check": "^0.2.2",
     "@types/aws-lambda": "^8.10.123",
     "@types/luxon": "^2.4.0",
@@ -26,6 +28,7 @@
     "@ceramicnetwork/stream-model-instance": "1.18.0",
     "@ceramicnetwork/stream-tile": "2.32.0",
     "@ceramicnetwork/streamid": "2.17.0",
+    "@composedb/client": "^0.5.2",
     "@composedb/devtools": "^0.5.1",
     "@jest/globals": "^29.7.0",
     "@jest/reporters": "^29.7.0",
