--- a/suite/package.json
+++ b/suite/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ceramic-smoke-tests",
+  "name": "ceramic-tests-suite",
   "version": "1.0.0",
-  "description": "Ceramic Node.js Utilities",
+  "description": "Ceramic Tests Suite",
   "type": "module",
   "scripts": {
     "build": "tsc",
