--- a/.github/workflows/schedule-durable.yml
+++ b/.github/workflows/schedule-durable.yml
@@ -20,7 +20,7 @@ on:
         type: string
         description: Path regex passed to Jest to select which tests to run
         required: true
-        default: .
+        default: fast
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -93,10 +93,10 @@ jobs:
         run: |
           # For scheduled events, "test_selector" will be null. Run all tests for QA but only "fast" ones for other
           # envs.
-          test_selector=${{ github.event.inputs.test_selector || '.' }}
+          test_selector=${{ github.event.inputs.test_selector || 'fast' }}
           if [[ ${{ github.event.inputs.test_selector == null }} == 'true' ]]; then
-            if [[ ${{ matrix.network != 'qa' }} == 'true' ]]; then
-              test_selector="fast"
+            if [[ ${{ matrix.network == 'qa' }} == 'true' ]]; then
+              test_selector="."
             fi
           fi
           make TEST_SELECTOR="$test_selector" schedule-durable-tests
