fix: add composedb/ceramic endpoints to .env file and mount it

--- a/suite/Dockerfile
+++ b/suite/Dockerfile
@@ -8,15 +8,11 @@ RUN apk add --no-cache curl jq
 
 COPY package.json pnpm-*.yaml jest.config.json tsconfig.json entrypoint.sh update.sh ./
 
-# install all npm dependencies including dev dependencies
+# Install all npm dependencies including dev dependencies
 RUN pnpm install
 
-# copy all files not excluded by .dockerignore of current directory to docker container
+# Copy all files not excluded by .dockerignore of current directory to docker container
 COPY src/ ./src
-COPY env/ ./env
-
-# Set the default .env path for Jest to load
-ENV DOTENV_CONFIG_PATH "./env/.env.dev"
 
 # Select all tests by default
 ENV TEST_SELECTOR "."
