--- a/.github/workflows/run-durable.yml
+++ b/.github/workflows/run-durable.yml
@@ -86,6 +86,12 @@ jobs:
           fi
           # Expose the Keramik ComposeDB port to the host so that the tests can connect to it
           source ./port-forward.sh "keramik-${{ matrix.network }}"
+          # If we found any Keramik ComposeDB endpoints, we'll also have Ceramic API endpoints. Add them to the config.
+          if [[ -n "$COMPOSEDB_URLS" ]];
+          then
+            sed -i "s|COMPOSEDB_URLS.*|&,$COMPOSEDB_URLS|" suite/env/.env."${{ matrix.network }}"
+            sed -i "s|CERAMIC_URLS.*|&,$CERAMIC_URLS|" suite/env/.env."${{ matrix.network }}"
+          fi
           make DURABLE_ENV=${{ matrix.network }} durable-tests
 
   collect-results:
