--- a/suite/env/.env.dev
+++ b/suite/env/.env.dev
@@ -1,3 +1,3 @@
 ANCHOR_INTERVAL_MIN=780
-COMPOSEDB_URLS=https://ceramic-private-dev.3boxlabs.com,https://ceramic-dev.3boxlabs.com
+COMPOSEDB_URLS=
 STAGE=dev
