--- a/suite/env/.env.qa
+++ b/suite/env/.env.qa
@@ -1,3 +1,3 @@
 ANCHOR_INTERVAL_MIN=780
-COMPOSEDB_URLS=https://ceramic-private-qa.3boxlabs.com,https://ceramic-qa.3boxlabs.com
+COMPOSEDB_URLS=
 STAGE=qa
