fix: remove illegal character
Added ssl dev

Added openssl and pkg-config installs

disable mac builds

Added gh release step

fix artifact path

rename release file

bump version to test releaes

vendor openssl for static linking

vendor openssl for static linking

move openssl static to hermetic cargo.toml

Update .github/workflows/create-release.yml

Co-authored-by: Mohsin Zaidi <2236875+smrz2001@users.noreply.github.com>

trying out mac

Try brew install openssl

artifact mac

Added docker image

Added tag output for release

Disable linux arm64

trying github image repo

Use AWS ECR public repo

fix: address comments, build binaries

fix: dupe key name

fix: dupe key name

fix: dependency

fix: added ending space

fix: use build tag for image

fix: tag problems

--- a/hermetic/Cargo.toml
+++ b/hermetic/Cargo.toml
@@ -23,3 +23,4 @@ keramik-operator = { git = "https://github.com/3box/keramik.git", branch = "main
 # Do not upgrade to 0.9, see https://github.com/dtolnay/serde-yaml/issues/298
 # TL;DR Version 0.9 uses YAML tags for enums which breaks.
 serde_yaml = "0.8"
+openssl = { version = "0.10", features = ["vendored"] }
