--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -7,16 +7,16 @@ permissions:
 on:
   workflow_dispatch:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
     paths:
-      - 'Cargo.toml'
+      - "Cargo.toml"
 
 jobs:
   # Build and packages all the things
   build-binaries:
     if: |
-      contains(github.event.head_commit.message, 'chore: Release') == 'true' || \
-      contains(github.event.head_commit.message, 'chore: Bump') == 'true' || \
+      contains(github.event.head_commit.message, 'chore: Release') == 'true' ||
+      contains(github.event.head_commit.message, 'chore: Bump') == 'true' ||
       github.event_name == 'workflow_dispatch'
     strategy:
       matrix:
@@ -27,11 +27,11 @@ jobs:
             arch: x86_64
             ext: deb
             protoc-arch: linux-x86_64
-          - target: x86_64-apple-darwin
-            os: macos-latest
-            arch: x86_64
-            ext: pkg
-            protoc-arch: osx-x86_64
+          # - target: x86_64-apple-darwin
+          #   os: macos-latest
+          #   arch: x86_64
+          #   ext: pkg
+          #   protoc-arch: osx-x86_64
           - target: aarch64-apple-darwin
             os: macos-latest
             config-file: fpm/osx.fpm
@@ -45,6 +45,12 @@ jobs:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v3
+      - name: Install libssl-dev
+        if: matrix.target == 'x86_64-unknown-linux-gnu'
+        run: sudo apt-get install libssl-dev pkg-config
+      - name: Brew install openssl
+        if: matrix.target == 'aarch64-apple-darwin'
+        run: brew install openssl
       - name: Install Rust
         run: |
           rustup update stable
@@ -60,27 +66,56 @@ jobs:
           name: hermetic-driver-${{ matrix.target }}
           path: target/${{ matrix.target }}/release/hermetic-driver
 
-  # release:
-  #   needs: [build-binaries]
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_TOKEN }}
-  #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #   steps:
-      # - uses: actions/checkout@v3
-      #   with:
-      #     fetch-depth: 0
-      # - uses: actions/download-artifact@v3
-      #   with:
-      #     path: artifacts
-      # - name: check artifacts
-      #   run: |
-      #     ls artifacts/**/*
-      # - name: Install Rust toolchain
-      #   uses: dtolnay/rust-toolchain@stable
-      # - id: release
-      #   run: |
-      #     export TAG=$(cargo metadata --format-version=1 --no-deps | jq '.packages[0].version' | tr -d '"')
-      #     echo "Releasing "$TAG
-      #     gh release create "v${TAG}" -n "Release of ${TAG}" -t "v${TAG}" --latest artifacts/**/*.tar.gz
+  create-release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    needs: [build-binaries]
+    outputs:
+      build_tag: ${{ steps.release.outputs.tag }}
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - uses: actions/download-artifact@v3
+        with:
+          path: artifacts
+      - name: check artifacts
+        run: |
+          ls artifacts/**/*
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+      - id: release
+        run: |
+          export TAG=$(cargo metadata --format-version=1 --no-deps | jq -r '.packages[0].version' )
+          echo "Releasing "$TAG
+          echo "tag=${TAG}" >> "$GITHUB_OUTPUT"
+          mkdir -p artifacts/output
+          cp artifacts/hermetic-driver-x86_64-unknown-linux-gnu/hermetic-driver \
+            artifacts/output/hermetic-driver-x86_64-linux
+          cp artifacts/hermetic-driver-aarch64-apple-darwin/hermetic-driver \
+            artifacts/output/hermetic-driver-aarch64-apple-darwin
+          current_branch=$(git rev-parse --abbrev-ref HEAD)
+          gh release create "v${TAG}" \
+            --generate-notes \
+            --target "$current_branch" \
+            --generate-notes \
+            --latest \
+            artifacts/output/hermetic-driver-x86_64-linux \
+            artifacts/output/hermetic-driver-aarch64-apple-darwin
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Public ECR
+        uses: docker/login-action@v2
+        with:
+          registry: public.ecr.aws
+          username: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        env:
+          AWS_REGION: us-east-1
+      - name: Check
+        shell: bash
+        run: echo build_path "${{ steps.release.outputs.tag }}"
+      - name: Build and Publish
+        run: make BUILD_TAG=${{ steps.release.outputs.tag }} publish-hermetic-driver
