--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -7,9 +7,9 @@ permissions:
 on:
   workflow_dispatch:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
     paths:
-      - 'Cargo.toml'
+      - "Cargo.toml"
 
 jobs:
   # Build and packages all the things
@@ -45,6 +45,9 @@ jobs:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v3
+      - name: Install libssl-dev
+        if: matrix.target == 'x86_64-unknown-linux-gnu'
+        run: sudo apt-get install libssl-dev
       - name: Install Rust
         run: |
           rustup update stable
@@ -68,19 +71,19 @@ jobs:
   #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   #   steps:
-      # - uses: actions/checkout@v3
-      #   with:
-      #     fetch-depth: 0
-      # - uses: actions/download-artifact@v3
-      #   with:
-      #     path: artifacts
-      # - name: check artifacts
-      #   run: |
-      #     ls artifacts/**/*
-      # - name: Install Rust toolchain
-      #   uses: dtolnay/rust-toolchain@stable
-      # - id: release
-      #   run: |
-      #     export TAG=$(cargo metadata --format-version=1 --no-deps | jq '.packages[0].version' | tr -d '"')
-      #     echo "Releasing "$TAG
-      #     gh release create "v${TAG}" -n "Release of ${TAG}" -t "v${TAG}" --latest artifacts/**/*.tar.gz
+  # - uses: actions/checkout@v3
+  #   with:
+  #     fetch-depth: 0
+  # - uses: actions/download-artifact@v3
+  #   with:
+  #     path: artifacts
+  # - name: check artifacts
+  #   run: |
+  #     ls artifacts/**/*
+  # - name: Install Rust toolchain
+  #   uses: dtolnay/rust-toolchain@stable
+  # - id: release
+  #   run: |
+  #     export TAG=$(cargo metadata --format-version=1 --no-deps | jq '.packages[0].version' | tr -d '"')
+  #     echo "Releasing "$TAG
+  #     gh release create "v${TAG}" -n "Release of ${TAG}" -t "v${TAG}" --latest artifacts/**/*.tar.gz
