disable mac builds

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -27,17 +27,17 @@ jobs:
             arch: x86_64
             ext: deb
             protoc-arch: linux-x86_64
-          - target: x86_64-apple-darwin
-            os: macos-latest
-            arch: x86_64
-            ext: pkg
-            protoc-arch: osx-x86_64
-          - target: aarch64-apple-darwin
-            os: macos-latest
-            config-file: fpm/osx.fpm
-            arch: aarch64
-            ext: pkg
-            protoc-arch: osx-aarch_64
+          # - target: x86_64-apple-darwin
+          #   os: macos-latest
+          #   arch: x86_64
+          #   ext: pkg
+          #   protoc-arch: osx-x86_64
+          # - target: aarch64-apple-darwin
+          #   os: macos-latest
+          #   config-file: fpm/osx.fpm
+          #   arch: aarch64
+          #   ext: pkg
+          #   protoc-arch: osx-aarch_64
         #- target: x86_64-pc-windows-msvc
         #  os: windows-latest
     runs-on: ${{ matrix.os }}
