--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -48,7 +48,10 @@ jobs:
         run: sudo apt-get install libssl-dev pkg-config
       - name: Install libssl-dev
         if: matrix.target == 'aarch64-apple-darwin'
-        run: sudo brew install openssl pkg-config
+        run: |
+          brew install openssl pkg-config
+          export OPENSSL_INCLUDE_DIR=$(brew --prefix openssl)/include
+          export OPENSSL_LIB_DIR=$(brew --prefix openssl)/lib
       - name: Install Rust
         run: |
           rustup update stable
