fix: use kubo with cas

--- a/networks/basic-rust.yaml
+++ b/networks/basic-rust.yaml
@@ -8,3 +8,7 @@ spec:
   ceramic:
     - ipfs:
         rust: {}
+  # Use Kubo with CAS because it still needs pubsub
+  cas:
+    ipfs:
+      go: {}
