--- a/.github/workflows/schedule-durable.yml
+++ b/.github/workflows/schedule-durable.yml
@@ -15,7 +15,6 @@ on:
           - qa
           - tnet
           - prod
-          - all
       test_selector:
         type: string
         description: Path regex passed to Jest to select which tests to run
@@ -80,8 +79,8 @@ jobs:
         id: get_branch
       -
         name: Schedule ${{ matrix.network }}
-        # A scheduled run will not include any inputs, so we treat it as needing to test "all" networks.
-        if: ${{ github.event.inputs.environment == null || github.event.inputs.environment == 'all' || github.event.inputs.environment == matrix.network }}
+        # A scheduled run will not include any inputs, so we treat it as needing to test all networks.
+        if: ${{ github.event.inputs.environment == null || github.event.inputs.environment == matrix.network }}
         env:
           BUILD_TAG: ${{ needs.publish-suite.outputs.build_tag }}
           DURABLE_ENV: ${{ matrix.network }}
