feat: add cli flags for perf tests

--- a/networks/basic-rust.yaml
+++ b/networks/basic-rust.yaml
@@ -5,9 +5,14 @@ metadata:
   name: basic-rust
 spec:
   replicas: 2
+  networkType: "local"
   ceramic:
     - ipfs:
-        rust: {}
+        rust: {
+            env: {
+              CERAMIC_ONE_RECON: "true"
+            }
+        }
   # Use Kubo with CAS because it still needs pubsub
   cas:
     ipfs:
