feat: add event sync correctness tests
This change adds correctness tests that hit the Ceramic API directly for
events. Events are written and validated to have propagated to other
nodes.

--- a/suite/Dockerfile
+++ b/suite/Dockerfile
@@ -4,7 +4,7 @@ RUN npm install -g pnpm
 
 WORKDIR /app
 
-RUN apk add --no-cache curl jq
+RUN apk add --no-cache curl jq bash
 
 COPY package.json pnpm-*.yaml jest.config.json tsconfig.json entrypoint.sh update.sh ./
 
