--- a/suite/package.json
+++ b/suite/package.json
@@ -20,22 +20,25 @@
     "@aws-sdk/client-api-gateway": "^3.427.0",
     "@aws-sdk/client-dynamodb": "^3.427.0",
     "@aws-sdk/client-lambda": "^3.427.0",
-    "@ceramicnetwork/common": "3.2.0",
-    "@ceramicnetwork/http-client": "3.2.0",
-    "@ceramicnetwork/stream-model": "2.2.0",
-    "@ceramicnetwork/stream-model-instance": "2.2.0",
-    "@ceramicnetwork/stream-tile": "3.2.0",
-    "@ceramicnetwork/streamid": "3.2.0",
-    "@composedb/devtools": "^0.6.1",
+    "@ceramicnetwork/common": "3.3.0",
+    "@ceramicnetwork/http-client": "3.3.0",
+    "@ceramicnetwork/stream-model": "2.3.0",
+    "@ceramicnetwork/stream-model-instance": "2.3.0",
+    "@ceramicnetwork/stream-tile": "3.3.0",
+    "@ceramicnetwork/streamid": "3.3.0",
+    "@composedb/devtools": "0.6.1",
     "@jest/globals": "^29.7.0",
     "@jest/reporters": "^29.7.0",
+    "@stablelib/random": "^1.0.2",
     "axios": "^0.24.0",
-    "dids": "^5.0.2",
+    "cross-fetch": "^4.0.0",
+    "dids": "5.0.2",
     "dotenv": "^16.3.1",
     "jest": "^29.7.0",
-    "key-did-provider-ed25519": "^4.0.2",
-    "key-did-resolver": "^4.0.0",
+    "key-did-provider-ed25519": "4.0.2",
+    "key-did-resolver": "4.0.0",
     "luxon": "3.2.1",
+    "multiformats": "^13.0.1",
     "node-jq": "^2.3.5",
     "rxjs": "^7.8.1",
     "ts-jest": "^29.1.1",
