feat: can run performance tests

--- a/networks/basic-rust.yaml
+++ b/networks/basic-rust.yaml
@@ -8,11 +8,7 @@ spec:
   networkType: "local"
   ceramic:
     - ipfs:
-        rust: {
-            env: {
-              CERAMIC_ONE_RECON: "true"
-            }
-        }
+        rust: { env: { CERAMIC_ONE_RECON: "true" } }
   # Use Kubo with CAS because it still needs pubsub
   cas:
     ipfs:
