--- a/networks/basic-rust.yaml
+++ b/networks/basic-rust.yaml
@@ -7,7 +7,7 @@ spec:
   replicas: 2
   ceramic:
     - ipfs:
-        rust: {}
+        rust: { env: { CERAMIC_ONE_RECON: "true" } }
   # Use Kubo with CAS because it still needs pubsub
   cas:
     ipfs:
